--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!--Portifólio-->
     <a href="https://drive.google.com/file/d/1bJyKAGP_0nbo9OHmU3GTsULhElij2LUN/view?usp=drivesdk" target="_blank">
         <div class="div_link">
-            <h2>Portifólio</h2>
+            <h2>Portfólio</h2>
         </div>
     </a>
 
