--- a/index.html
+++ b/index.html
@@ -3,25 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="logo004.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="shortcut icon" href="img/arsenica.png" type="image/x-icon">
     <title>Arsënica</title>
 </head>
 <body>
     <header>
         <div id="logo_arsenica"></div> <!--Logo Arsënica-->
     </header>
-
-    <!--Contato-->
-    <a href="https://wa.me/5517982082272", target="_blank">
-        <div class="div_link">
-            <img src="2062095_application_chat_communication_logo_whatsapp_icon.svg.png" alt="Whatsapp">
-            <h2>Whatsapp - Contrate agora</h2>
-        </div>
-    </a>
-
-    <!-- &#129309;--><!--codigo emoji-->
-
+    
     <!--Portifólio-->
     <a href="https://drive.google.com/file/d/1bJyKAGP_0nbo9OHmU3GTsULhElij2LUN/view?usp=drivesdk" target="_blank">
         <div class="div_link">
@@ -29,7 +19,29 @@
         </div>
     </a>
 
+    <!--Contato-->
+    <a href="https://wa.me/5517982082272", target="_blank">
+        <div class="div_link">
+            <img src="img/whatsapp.png" alt="Whatsapp">
+            <h2>Whatsapp</h2>
+        </div>
+    </a>
 
+    <!-- &#129309;--><!--codigo emoji-->
+
+    <a href="https://www.facebook.com/oficialarsenica?mibextid=ZbWKwL", target="_blank">
+        <div class="div_link">
+            <img src="img/facebook.png" alt="Whatsapp">
+            <h2>Facebook</h2>
+        </div>
+    </a>
+
+    <a href="https://instagram.com/oficialarsenica?igshid=MzRlODBiNWFlZA==", target="_blank">
+        <div class="div_link">
+            <img src="img/instagram.png" alt="Whatsapp">
+            <h2>Instagram</h2>
+        </div>
+    </a>
 
 <!--<a href="#">
         <div class="div_link">
